fix for jumping around with scroll bar

--- a/frontend/css/app.scss
+++ b/frontend/css/app.scss
@@ -7,6 +7,7 @@ body {
 
 #main {
   flex: 1;
+  margin-left: calc(100vw - 100%); /* prevent jump with scroll bar */
 }
 
 #loading-body {
@@ -18,11 +19,6 @@ body {
 
 html {
   -webkit-tap-highlight-color: transparent;
-  margin-left: calc(100vw - 100%); /* prevent jump with scroll bar */
-}
-
-header {
-  margin-left: calc(-1 * (100vw - 100%)); /* prevent jump with scroll bar */
 }
 
 [x-cloak] { display: none !important; }
